# sdwan-client-probe

./: .gitignore  RC-sdwan-client-probe_v1.1.spec  RC-sdwan-host-check_v1.0.spec  README.md  SDWAN_Report_20260415_090858.json  pyproject.toml  sdwan-analyzer.spec  sdwan_analyzer.spec
.comate/rules/: my-rules.mdr
.trae/rules/: project_rules.md
configs/: default.yaml
data/: reports
docs/: DomainModel 粒度规范.md  chat_log.md  my-all-rules.md  my-rules.md  python_rules.md
src/sdwan_analyzer/: __main__.py  config.py  main.py
src/sdwan_analyzer/analyze/: path_analyze.py  quality.py  root_cause.py
src/sdwan_analyzer/core/: bootstrap.py  contracts.py  formatter.py  mtr.py  ping.py  tracert.py  types.py
src/sdwan_analyzer/engine/: decision_tree.py  smart_scheduler.py
src/sdwan_analyzer/infrastructure/: config.py
src/sdwan_analyzer/interface/: cli.py  cli_adapter.py
src/sdwan_analyzer/models/: diagnose.py  entities.py
src/sdwan_analyzer/modules/: app_probe.py  cross_border_test.py  dns_check.py  firewall_check.py  local_net_config.py  net_diagnostic.py  nic_info.py  proxy_check.py  report.py  route_check.py  sdwan_check.py  system_collector.py  system_diagnose.py  test_dns_contrast.py
src/sdwan_analyzer/observability/: logger.py  metrics.py
src/sdwan_analyzer/runtime/: engine.py
src/sdwan_analyzer/services/: diagnostic.py
src/sdwan_analyzer/tools/: __init__.py  autodiscovery.py  dispatcher.py  registry.py
tests/integration/: test_integration.py
tests/unit/: test_app_probe.py  test_core.py  test_sdwan_check.py  test_system_diagnose.py
(+18 files in other folders)
